--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -9,7 +9,7 @@
                 <textarea rows="6" placeholder="Send Question" ng-model="feedback.content"></textarea>
             </label>
         </div>
-        <button ng-click="sendFeedback()" class="button button-light button-full">Send</button>
+        <button ng-click="sendFeedback()" class="button button-light button-full btn-full-half">Send</button>
         <div class="padding-div">
             <h3 class="title">Get in touch with us!</h3>
         </div>
