#113481157 User wants to see embedded youtube video in card detail view

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -9,7 +9,8 @@
             </div>
 
             <div class="item item-body">
-                <p>{{ card.description }}</p>
+
+                <p ng-bind-html="trustHtml(linkifyYouTubeURLs(card.description))"></p>
 
                 <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
             </div>
