--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -234,7 +234,7 @@ p {
 }
 
 .card-detail-view {
-  
+
   .card-detail-view-bg {
     position: absolute;
     width: 100vw;
@@ -256,6 +256,30 @@ p {
         padding-right: 10px;
       }
     }
+
+  .list.card {
+    .item.item-body {
+      .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
+        margin: 10px 0;
+      }
+
+      .video-container iframe,
+      .video-container object,
+      .video-container embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+    }
+  }
 }
 
 .event-detail-view {
