#139298561 fix timercard demo

--- a/platforms/android/assets/www/templates/login.html
+++ b/platforms/android/assets/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-modal-view hide-nav-bar="true" class="login" id="login">
+﻿<ion-modal-view hide-nav-bar="true" class="login" id="login">
 
   <ion-content padding="true" scroll="false">
     <form ng-submit="doLogin()" name="loginForm" novalidate>
