#113949773 User wants to see images in card detail view

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -10,9 +10,10 @@
 
             <div class="item item-body">
 
-                <p ng-bind-html="trustHtml(linkifyYouTubeURLs(card.description))"></p>
+                <p ng-bind-html="trustHtml(findImageLinks(linkifyYouTubeURLs(card.description)))"></p>
 
                 <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
+
             </div>
             <div class="item item-footer">
                 <div id="footer-logo-div"><img id="footer-logo" src="{{ logoUrl }}"></div>
