--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -258,14 +258,17 @@ p {
     }
 
   .list.card {
+
     .item.item-body {
+
       .video-container {
         position: relative;
         padding-bottom: 56.25%;
         padding-top: 30px;
         height: 0;
         overflow: hidden;
-        margin: 10px 0;
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
 
       .video-container iframe,
@@ -276,6 +279,11 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
+      }
+
+      .img-container {
+        @extend .video-container;
+        padding-top: 0;
       }
 
     }
