--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -2,73 +2,69 @@
     <div class="feed-bg"></div>
     <ion-content>
         <div class="padding-div">
-            <h3 class="title">You can ask questions and send feedback from this form</h3>
+            <h3 class="title text-center">Get in touch with us!</h3>
+            <div class="content--separator-line"></div>
+        </div>
+        <div class="padding-div">
+            <p class="text-center">If you have any questions or feedback, please feel free to contact our organising committee. Like us on <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><strong>Facebook</strong></a>                and get our latest news and updates in your feed!
+            </p>
+        </div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Project Manager</b>
+            </p>
+            <img src="http://fillmurray.com/100/100" />
+            <h4>
+                <strong>Selene Gnadenteich</strong>
+            </h4>
+            <p>
+                info.tallinneudc@debate.ee
+            </p>
+        </div>
+        <div class="content--separator-line-xs"></div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Sponsors</b>
+            </p>
+            <img src="http://fillmurray.com/100/100" />
+            <h4>
+                <strong>Olesja Zorina</strong>
+            </h4>
+            <p>
+                tallinneudc@debate.ee
+            </p>
+        </div>
+        <div class="content--separator-line-xs"></div>
+        <div class="padding-div text-center">
+            <p>
+                <b>Media & PR</b>
+            </p>
+            <img src="http://fillmurray.com/100/100" />
+            <h4>
+                <strong>Jane Kalnapenkis</strong>
+            </h4>
+            <p>
+                jane.kalnapenkis@debate.ee
+            </p>
+        </div>
+        <div class="padding-div">
+            <h3 class="title text-center" style="position:relative;padding-top:50px;">Feedback & Questions</h3>
+            <div class="content--separator-line"></div>
         </div>
         <div class="padding-div">
             <label class="item item-input">
                 <textarea rows="6" placeholder="Send Question" ng-model="feedback.content"></textarea>
             </label>
         </div>
-        <button ng-click="sendFeedback()" ng-disabled="!feedback.content" class="button button-light button-full btn-full-half">Send</button>
-        <div class="padding-div">
-            <h3 class="title">Get in touch with us!</h3>
-        </div>
-        <div class="padding-div">
-            <p>If you have any questions or feedback, please feel free to contact our organising committee.
-                Like us on <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/">Facebook</a>
-                and get our latest news and updates in your feed!
-            </p>
-        </div>
-        <div class="padding-div">
-            <p>
-                <b>Project Manager</b>
-            </p>
-            <p>
-                Selene Gnadenteich
-            </p>
-            <p>
-                info.tallinneudc@debate.ee
-            </p>
-        </div>
-        <div class="padding-div">
-            <p>
-                <b>Sponsors</b>
-            </p>
-            <p>
-                Olesja Zorina
-            </p>
-            <p>
-                tallinneudc@debate.ee
-            </p>
-        </div>
-        <div class="padding-div">
-            <p>
-                <b>Media & PR</b>
-            </p>
-            <p>
-                Jane Kalnapenkis
-            </p>
-            <p>
-                jane.kalnapenkis@debate.ee
-            </p>
-        </div>
-        <div class="padding-div">
-            <p>
-                Website: <a href="http://tallinneudc.com/">tallinneudc.com</a>
-            </p>
-            <p>
-                Event facebook: <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/">Tallinn EUDC
-                2017</a>
-            </p>
-            <p>
-                Organisers facebook: <a href="https://www.facebook.com/TTUDebate/?fref=ts">TTUDebate</a>
-            </p>
+        <button ng-click="sendFeedback()" ng-disabled="!feedback.content" class="custom-button button button-full btn-full-half">Send</button>
+        <div class="padding-div contacts-social--container">
+            <a href="http://tallinneudc.com/"><i class="contacts--icon ion-earth"></i></a>
+            <a href="https://www.facebook.com/Tallinn-EUDC-2017-355451294579393/"><i class="contacts--icon ion-social-facebook"></i></a>
+            <a href="https://www.facebook.com/TTUDebate/?fref=ts"><i class="contacts--icon ion-social-instagram"></i></a>
         </div>
 
-        <div class="padding-div">
-            <p>
-                Tallinn University of Technology Debate Society
-            </p>
+        <div class="padding-div text-center">
+            <p>Tallinn University of Technology Debate Club</p>
             <p>
                 Ehitajate tee 5, 19086 Tallinn
             </p>
