--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -7,7 +7,7 @@
             <!-- <div class="timer-card__header">
               <h3>Your round:</h3>
             </div> -->
-            <ion-item ng-repeat="timercard in timercards" class="item feed-card timer-card" ng-class="time">
+            <ion-item ng-repeat="timercard in timercards" class="accent--button item feed-card timer-card" ng-class="time">
                     <div class="item-avatar-left">
                         <i class="ion-icon ion-ios-timer-outline"></i>
                         <h2>{{timercard.title}}</h2>
