--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,26 +18,30 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item class="menu-item" menu-close href="#/app/tournamentFeed">
+        <ion-item class="menu-item menu--item-active" menu-close href="#/app/tournamentFeed">
           <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
         </ion-item>
-        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#/app/map">
           <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
         </ion-item>
-        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#/app/contacts">
           <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
         </ion-item>
-        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#/app/calendar">
           <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
         </ion-item>
-        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#/app/about">
           <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
         </ion-item>
+
       </ion-list>
     </ion-content>
+    <ion-footer>
+      <ion-toolbar>
+        <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
+        <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
+        <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>
+      </ion-toolbar>
+    </ion-footer>
   </ion-side-menu>
 </ion-side-menus>
