#143058565 Add real photos to contacts view

--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -13,7 +13,7 @@
             <p>
                 <b>Project Manager</b>
             </p>
-            <img src="http://fillmurray.com/100/100" />
+            <img src="../img/selene_photo.jpg" />
             <h4>
                 <strong>Selene Gnadenteich</strong>
             </h4>
@@ -26,7 +26,7 @@
             <p>
                 <b>Sponsors</b>
             </p>
-            <img src="http://fillmurray.com/100/100" />
+            <img src="../img/olesja_photo.jpg" />
             <h4>
                 <strong>Olesja Zorina</strong>
             </h4>
@@ -39,7 +39,7 @@
             <p>
                 <b>Media & PR</b>
             </p>
-            <img src="http://fillmurray.com/100/100" />
+            <img src="../img/jane_photo.jpg" />
             <h4>
                 <strong>Jane Kalnapenkis</strong>
             </h4>
